--- a/Event_Detailpage.html
+++ b/Event_Detailpage.html
@@ -129,7 +129,7 @@
                 <a href="calendar.html"><img src="img/icon/calendar.svg" /></a>
             </li>
             <li>
-                <a href="SearchPage.html"><img src="img/icon/search.svg" /></a>
+                <a href="SearchPage.html"><img src="img/icon/searchSelected.svg" /></a>
             </li>
             <li>
                 <a href="profielLogIn.html"><img src="img/icon/user.svg" /></a>
