--- a/calendar.html
+++ b/calendar.html
@@ -49,10 +49,10 @@
                 <a href="index.html"> <img src="img/icon/home.svg" /></a>
             </li>
             <li>
-                <a href="calendar.html"><img src="img/icon/calendarSelected.svg" /></a>
+                <a href="Event_Detailpage.html"><img src="img/icon/calendarSelected.svg" /></a>
             </li>
             <li>
-                <a href="SearchPage.html"><img src="img/icon/search.svg" /></a>
+                <a href="calendar.html"><img src="img/icon/search.svg" /></a>
             </li>
             <li>
                 <a href="profielLogIn.html"><img src="img/icon/user.svg" /></a>
