--- a/registerHere.html
+++ b/registerHere.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 
-    <script src="/js/registerHere.js"></script>
+    <script src="js/registerHere.js"></script>
 </head>
 
 <body>
