--- a/calendar.html
+++ b/calendar.html
@@ -52,7 +52,7 @@
                 <a href="Event_Detailpage.html"><img src="img/icon/calendarSelected.svg" /></a>
             </li>
             <li>
-                <a href="calendar.html"><img src="img/icon/search.svg" /></a>
+                <a href="SearchPage.html"><img src="img/icon/search.svg" /></a>
             </li>
             <li>
                 <a href="profielLogIn.html"><img src="img/icon/user.svg" /></a>
